Fix CORS permanently by allowing all origin patterns